# template-python-basic

./: .coverage  .coveragerc  .env.EXAMPLE  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.db  coverage.xml  dagster.yaml  mkdocs.yml  pyproject.toml  readme.md  requirements_dev.txt  watcher.py
.PRDS/: phase-1-repository-enhancement.md  phase-2-dependency-injection.md  phase-3-error-handling.md  phase-4-service-enhancements.md  phase-5-performance-testing.md
docker/: Dockerfile  docker-compose.yml
docs/: getting-started.md  index.md
docs/api/: health.md  index.md
docs/setup/: development.md  index.md
scripts/: async_database_example.py  database_example.py  init_db.py  sandbox.py
src/: config.py  main.py
src/api/: dependencies.py  server.py
src/api/features/: router.py
src/api/features/docs/: router.py
src/api/features/guide/: controller.py  router.py
src/api/features/health/: controller.py  models.py  router.py
src/api/features/tasks/: controller.py  models.py  router.py
src/api/features/users/: controller.py  models.py  router.py
src/api/middleware/: cors_middleware.py  error_handling.py
src/asset_definitions/: __init__.py  assets.py
src/config/: __init__.py  config.py
src/dagster_definitions/: assets.py
src/database/: README.md  __init__.py  base.py  connection.py  engine.py  example.py  init_db.py  session.py  types.py
src/database/migrations/: README  env.py
src/database/migrations/versions/: 538c2b40ce9d_initial_migration_create_users_and_.py
src/database/models/: README.md  __init__.py  base.py  task.py  user.py
src/database/models/base/: __init__.py  base.py
src/database/models/public/: __init__.py  base.py  task.py  user.py
src/database/operations/: __init__.py  base.py  task_ops.py  user_ops.py
src/database/repositories/: __init__.py  base.py  task.py  user.py
src/database/seeds/: example.py
src/definitions/: assets.py
src/services/guide/: __init__.py  exceptions.py  models.py  service.py  templates.py
src/services/health/: __init__.py  service.py
src/services/operations/: base.py  user_ops.py
src/services/postgres/: postgres_client.py
src/services/shared/: base_repository.py  exceptions.py  transaction.py
src/services/tasks/: __init__.py  exceptions.py  repository.py  service.py  task_ops.py
src/services/users/: __init__.py  exceptions.py  repository.py  service.py
tests/: conftest.py  test_env_config.py  test_health_service.py  test_main.py
tests/fixtures/: database.py
tests/integration/database/: README.md  conftest.py  test_alembic_migrations.py  test_session_management.py  test_task_repository.py  test_user_repository.py
tests/unit/services/: test_health_service.py  test_name_validation.py
